# sphinx-attrs-bug-20211018

./: README.rst  setup.cfg  sphinx_attrs.py
docs/: conf.py  index.rst
src/sphinx_attrs/: __init__.py
